# opm-flowexperimental

./: CMakeLists.txt  CMakeLists_files.cmake  dune.module  opm-flowexperimental-prereqs.cmake
ebos/equil/: equilibrationhelpers_impl.hh  initstateequil_impl.hh
examples/: BlackOilModelFv.hpp  BlackOilModelFvFast.hpp  BlackOilModelFvNoCache.hpp  EclProblemSimple.hpp  EclProblemSimpleFast.hpp  co2ptflowproblem.hh  ebos.cpp  ebos.hh  ebos_comp.cpp  ebos_comp_clean.cpp  ebos_comp_simple.cpp  ebos_experiment.cpp  flow_blackoil_drygas.cpp  flow_blackoil_fast.cpp  flow_blackoil_fast_oilgas.cpp  flow_blackoil_fast_oilgas_energy.cpp  flow_blackoil_fast_wateroil.cpp  flow_blackoil_nocache.cpp  flow_blackoil_noelemctx.cpp  flow_blackoil_tracy.cpp  flow_comp.cpp  systemsolve.json  systemsolve_org.json  systemsolve_system.json
examples/material/: test_eclpropertyevaluation.cpp  test_eclpropertyevaluation_lowlevel.cpp  test_eclrelpermevaluation.cpp  test_eclrelpermevaluation_lowlevel.cpp  test_propertyevaluation.cpp  test_relpermevaluation.cpp
opm/flowexperimental/: blackoilenergymodulesfv.hh  blackoilenergymodulestpfa.hh  blackoilintensivequantitiesdrygas.hh  blackoilintensivequantitiessimple.hh  eclblackoilintensivequantities.hh
opm/material/fluidmatrixinteractions/: EclDefaultMaterialExperimental.hpp  EclMaterialLawManagerTable.cpp  EclMaterialLawManagerTable.hpp
opm/simulators/linalg/: ISTLSolverExperiment.cpp  ISTLSolverExperiment.hpp  MultiComm.hpp  SystemPreconditioner.cpp  SystemPreconditioner.hpp  WellMatrixMerger.hpp
